Page Commander OK

--- a/wp-content/themes/astrachild/css/theme.css
+++ b/wp-content/themes/astrachild/css/theme.css
@@ -11,7 +11,9 @@ body * {
 
 /* HEADER */
 
+
 /* Les deux bt */
+
 li.menu-item a {
    height: 80px !important;
    display: inline-block;
@@ -25,7 +27,9 @@ li.menu-item a {
    text-decoration: none !important;
  }
    
+
  /* bt Nous rencontrer */
+
  li.menu-item-25 a {
    color: #000000 !important;
  }
@@ -34,8 +38,10 @@ li.menu-item a {
    color: #000000 !important;
    font-weight: 700;
  }
-   
+
+
  /* bt commander */
+
  li.menu-item-24 a {
    color: #ffffff !important;
    background-color: #DC9F96;
@@ -47,6 +53,13 @@ li.menu-item a {
    background-color: #C02E44;
    font-weight: 700;
  }
+
+
+ /* bt ADMIN */
+
+li.adminlink {
+  align-content: center;
+}
 
 
 
@@ -91,7 +104,7 @@ li.menu-item a {
 
 .wpcf7-form label {
   font-size: 20px;
-  color:#000000;
+  color:#ffffff;
 }
 
 .wpcf7-submit {
@@ -105,6 +118,121 @@ li.menu-item a {
 .wpcf7-submit:hover {
   background-color: #C02E44 !important;
   color: #ffffff !important;
+}
+
+.namefield {
+  color: #000000 !important;
+}
+
+.mailfield {
+  color: #000000 !important;
+}
+
+.messagefield {
+  color: #000000 !important;
+}
+
+
+
+
+
+/* Formulaire Commande */
+
+.centre-formulaire {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.form-haut {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-top: #ffffff 1px solid;
+  border-bottom: #ffffff 1px solid;
+}
+
+.form-haut h3 {
+  color: #ffffff;
+  margin-top: 40px;
+}
+
+.fruits {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;  /* pas sûr ! */
+  margin-top: 18px;
+  gap: 25px;
+}
+
+.groupe-fruit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fruit {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.fruit h4 {
+  position: absolute;
+  z-index: 2;
+  color: #ffffff;
+  text-align: center;
+  font-weight: 800;
+}
+
+.fruit img {
+  position: relative;
+  z-index: 1;
+}
+
+.strawberrysfield {
+  width: 39px !important;
+  height: 56px !important;
+  padding: 0 !important;
+  text-align: center;
+}
+
+
+
+/* Formulaire Commandes - Champs de texte */
+
+.form-bas {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  gap: 50px;
+}
+
+.form-bas h3 {
+  color:#ffffff;
+}
+
+.form-bas-filet {
+  border-left: #ffffff 1px solid;
+  padding-left: 50px;
+}
+
+.form-bas-filet p {
+  margin: 0 !important;
+}
+
+.form-bas-sansfilet p {
+  margin: 0 !important;
+}
+
+.btCommanderBas {
+  margin: 25px !important;
 }
 
 
@@ -122,3 +250,32 @@ li.menu-item a {
    font-size: 16px;
    background-color: #ffffff !important;
  }
+
+
+
+ /* RESPONSIVE */
+
+
+/* Medium devices (tablets, less/equal than 1024px) */
+@media (max-width: 1024px) {
+
+.form-bas-filet {
+  border-left: none;
+  padding-left: 0px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.form-bas-sansfilet {
+  margin-left: 15px !important;
+  margin-right: 15px;
+}
+  
+}
+  
+/* Small devices (phones, less than 768px) */
+@media (max-width: 767.98px) {
+  
+
+
+}
